--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2261,7 +2261,108 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;$584</th>\n",
+       "      <td>83.455399</td>\n",
+       "      <td>83.933814</td>\n",
+       "      <td>93.460096</td>\n",
+       "      <td>96.610877</td>\n",
+       "      <td>90.369459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$585-629</th>\n",
+       "      <td>81.899826</td>\n",
+       "      <td>83.155286</td>\n",
+       "      <td>87.133538</td>\n",
+       "      <td>92.718205</td>\n",
+       "      <td>81.418596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$630-644</th>\n",
+       "      <td>78.502002</td>\n",
+       "      <td>81.636261</td>\n",
+       "      <td>73.462589</td>\n",
+       "      <td>84.319261</td>\n",
+       "      <td>62.778233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$645-675</th>\n",
+       "      <td>76.997210</td>\n",
+       "      <td>81.027843</td>\n",
+       "      <td>66.164813</td>\n",
+       "      <td>81.133951</td>\n",
+       "      <td>53.526855</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Average Math Score  Average Reading Score  \\\n",
+       "Spending Ranges (Per Student)                                              \n",
+       "<$584                                   83.455399              83.933814   \n",
+       "$585-629                                81.899826              83.155286   \n",
+       "$630-644                                78.502002              81.636261   \n",
+       "$645-675                                76.997210              81.027843   \n",
+       "\n",
+       "                               % Passing Math  % Passing Reading  \\\n",
+       "Spending Ranges (Per Student)                                      \n",
+       "<$584                               93.460096          96.610877   \n",
+       "$585-629                            87.133538          92.718205   \n",
+       "$630-644                            73.462589          84.319261   \n",
+       "$645-675                            66.164813          81.133951   \n",
+       "\n",
+       "                               % Overall Passing  \n",
+       "Spending Ranges (Per Student)                     \n",
+       "<$584                                  90.369459  \n",
+       "$585-629                               81.418596  \n",
+       "$630-644                               62.778233  \n",
+       "$645-675                               53.526855  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create the DataFrame\n",
     "spending_summary_df = pd.DataFrame({\n",
@@ -2269,7 +2370,9 @@
     "    \"Average Reading Score\" : spending_reading_scores,\n",
     "    \"% Passing Math\" : spending_passing_math,\n",
     "    \"% Passing Reading\" : spending_passing_reading,\n",
-    "    \"% Overall Passing\" : overall_passing_spending})\n"
+    "    \"% Overall Passing\" : overall_passing_spending})\n",
+    "\n",
+    "spending_summary_df"
    ]
   },
   {
@@ -2421,7 +2524,91 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.821598</td>\n",
+       "      <td>83.929843</td>\n",
+       "      <td>93.550225</td>\n",
+       "      <td>96.099437</td>\n",
+       "      <td>89.883853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-2000)</th>\n",
+       "      <td>83.361201</td>\n",
+       "      <td>83.873869</td>\n",
+       "      <td>93.582398</td>\n",
+       "      <td>96.732654</td>\n",
+       "      <td>90.557997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.746417</td>\n",
+       "      <td>81.344493</td>\n",
+       "      <td>69.963361</td>\n",
+       "      <td>82.766634</td>\n",
+       "      <td>58.286003</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Size                                                                     \n",
+       "Small (<1000)                83.821598              83.929843       93.550225   \n",
+       "Medium (1000-2000)           83.361201              83.873869       93.582398   \n",
+       "Large (2000-5000)            77.746417              81.344493       69.963361   \n",
+       "\n",
+       "                    % Passing Reading  % Overall Passing  \n",
+       "School Size                                               \n",
+       "Small (<1000)               96.099437          89.883853  \n",
+       "Medium (1000-2000)          96.732654          90.557997  \n",
+       "Large (2000-5000)           82.766634          58.286003  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Assemble into DataFrame. \n",
     "size_summary_df = pd.DataFrame({\n",
@@ -2429,7 +2616,9 @@
     "    \"Average Reading Score\" : size_reading_scores,\n",
     "    \"% Passing Math\" : size_passing_math,\n",
     "    \"% Passing Reading\" : size_passing_reading,\n",
-    "    \"% Overall Passing\" : size_overall_passing})\n"
+    "    \"% Overall Passing\" : size_overall_passing})\n",
+    "\n",
+    "size_summary_df"
    ]
   },
   {
@@ -2551,7 +2740,81 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.465425</td>\n",
+       "      <td>83.902315</td>\n",
+       "      <td>93.610020</td>\n",
+       "      <td>96.550223</td>\n",
+       "      <td>90.392533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.465425              83.902315       93.610020   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.550223          90.392533  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Assemble into DataFrame. \n",
     "type_summary_df = pd.DataFrame({\n",
@@ -2559,7 +2822,9 @@
     "    \"Average Reading Score\" : type_reading_scores,\n",
     "    \"% Passing Math\" : type_passing_math,\n",
     "    \"% Passing Reading\" : type_passing_reading,\n",
-    "    \"% Overall Passing\" : type_overall_passing})\n"
+    "    \"% Overall Passing\" : type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
    ]
   },
   {
